--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,3 +35,4 @@ jobs:
     - name: Update dependency graph
       run: mvn com.github.ferstl:depgraph-maven-plugin:4.0.1:graph
       # uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      working-directory: ./calculatrice
